fix window title text color on high contrast

--- a/src/electron/views/automated-checks/components/title-bar.scss
+++ b/src/electron/views/automated-checks/components/title-bar.scss
@@ -6,6 +6,6 @@
     background: $ada-brand-color;
 
     h1 {
-        color: $always-white !important;
+        color: $header-bar-title-color !important;
     }
 }
